--- a/assets/css/home/introducao.css
+++ b/assets/css/home/introducao.css
@@ -1,7 +1,7 @@
 
 .introducao-bg {
-    background: #000000;
-    box-shadow: inset 0 -120px #FFF;
+    background: var(--cor-12);
+    box-shadow: inset 0 -120px var(--cor-0);
 }
 
 .introducao {
@@ -32,7 +32,7 @@
 }
 
 .introducao h1 span {
-    color: #FFBB00;
+    color: var(--cor-p1);
 }
 
 .introducao p {
@@ -54,7 +54,7 @@
     .introducao-bg {
         background: #111;
         padding-top: 40px;
-        box-shadow: inset 0 -60px #FFF;
+        box-shadow: inset 0 -60px var(--cor-0);
     }
 
     .introducao  {
